Fixing Storybook Elements UI issues
Accordian
1) Default : increase border radius
2) Stacked Closed : border not visible

Alert
2) color variable for alert

App Details
1) spacing issue of iocns

 Badge
1) icon with ovelay

--- a/raaghu-elements/src/root/styles-storybook.scss
+++ b/raaghu-elements/src/root/styles-storybook.scss
@@ -48,6 +48,7 @@
 }
 
 // Badge css
+
 .badge-primary {
   background-color: #c2e3ff;
   border-color: #c2e3ff;
@@ -1078,6 +1079,7 @@ svg {
 .badge {
   padding: $badge-padding-y $badge-padding-x;
   @include font-size($badge-font-size);
+  font-weight:500;
 }
 
 @mixin badge-variant($background, $border, $color) {
